--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
-@import "../node_modules/mini.css/dist/mini-dark.min.css";
+/* @import "../node_modules/mini.css/dist/mini-dark.min.css"; */
+@import "../node_modules/mini.css/dist/mini-default.min.css";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+/* @import "primeng/resources/themes/lara-light-blue/theme.css";
+@import "primeng/resources/primeng.css"; */
