--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,6 @@
     <p-button label="Check" icon="pi pi-check"></p-button>
 </div>
  -->
- <div  class="bg-primary-grey flex justify-center">
+ <div  class="flex justify-center">
   <router-outlet></router-outlet>
 </div>
