--- a/src/app/feature/movies-list/movies-list.component.html
+++ b/src/app/feature/movies-list/movies-list.component.html
@@ -1,19 +1,20 @@
-<!-- <table>
-  <thead></thead>
-  <tbody>
-    @for (item of movies; track item) {
-    <tr>
-      <td>{{ item.title }} : {{ item.release_date }}</td>
-      <td>
-        <p-button label="Details"></p-button>
-      </td>
-    </tr>
-    }
-  </tbody>
-</table> -->
+<div class="bg-grey-light p-4">
+  <div class="font-bold">Filters</div>
+  <div class="xl:columns-2 xl:gap-x-8">
+    <div>
+      <label>Title</label>
+      <input type="text" pInputText [(ngModel)]="title" (ngModelChange)="filterMovies()"/>
+    </div>
+    <div>
+      <label>Release Year</label>
+      <input type="text" pInputText [(ngModel)]="year" (ngModelChange)="filterMovies()"/>
+    </div>
+  </div>
+</div>
+
 <div class="flex justify-center">
   <ul>
-    @for (item of movies; track item) {
+    @for (item of filteredMovies; track item) {
     <li>
       <div class="flex justify-between">
         <div>
