--- a/src/styles.css
+++ b/src/styles.css
@@ -7,3 +7,7 @@
 
 /* @import "primeng/resources/themes/lara-light-blue/theme.css";
 @import "primeng/resources/primeng.css"; */
+body {
+  background-color: #eceff4;
+  height: 100vh;
+}
