--- a/src/app/feature/movies-list/movies-list.component.html
+++ b/src/app/feature/movies-list/movies-list.component.html
@@ -23,7 +23,7 @@
         </div>
 
         <div>
-          <p-button label="Details" styleClass="bg-secondary-grey"></p-button>
+          <p-button label="Details" styleClass="bg-secondary-grey" (click)="navigateToDetails(item.id)"></p-button>
         </div>
       </div>
     </li>
