--- a/src/styles.css
+++ b/src/styles.css
@@ -8,6 +8,6 @@
 /* @import "primeng/resources/themes/lara-light-blue/theme.css";
 @import "primeng/resources/primeng.css"; */
 body {
-  background-color: #eceff4; /* here */
+  background-color: #eceff4;
   height: 100vh;
 }
