separate filtering and list in to 2 components

--- a/src/app/feature/movie-details/movie-details.component.html
+++ b/src/app/feature/movie-details/movie-details.component.html
@@ -3,7 +3,7 @@
     <div class="pb-1">
       <p-button styleClass="bg-secondary-grey" (click)="goBack()">
         <div class="flex">
-          <img src="assets/icons/icons8-home.svg" width="18" alt="Back" />
+          <img src="assets/icons/icons_home.svg" width="18" alt="Back" />
           <div class="ml-2"> Back </div>
         </div>
       </p-button>
